--- a/main.html
+++ b/main.html
@@ -801,3 +801,71 @@
       });
 
       document.getElementById('btn-batch-register').addEventListener('click', async function() {
+        const targetsRaw = document.getElementById('batch-targets').value.trim();
+        const labelsRaw = document.getElementById('batch-labels').value.trim();
+        const msgEl = document.getElementById('batch-register-msg');
+        msgEl.style.display = 'none';
+        if (!contract || !signer) { msgEl.textContent = 'Connect wallet and attach contract.'; msgEl.className = 'msg err'; msgEl.style.display = 'block'; return; }
+        const targets = targetsRaw.split(/[\n,]+/).map(function(s) { return s.trim(); }).filter(Boolean);
+        const labelsSplit = labelsRaw.split(/[\n,]+/).map(function(s) { return s.trim(); });
+        const zeroHash = '0x' + '0'.repeat(64);
+        const labels = targets.length > labelsSplit.length ? targets.map(function(_, i) { return labelsSplit[i] && labelsSplit[i].startsWith('0x') && labelsSplit[i].length === 66 ? labelsSplit[i] : zeroHash; }) : (labelsSplit.length ? labelsSplit.slice(0, targets.length).map(function(l) { return l && l.startsWith('0x') && l.length === 66 ? l : zeroHash; }) : targets.map(function() { return zeroHash; }));
+        if (targets.length === 0) { msgEl.textContent = 'Enter at least one target address.'; msgEl.className = 'msg err'; msgEl.style.display = 'block'; return; }
+        if (targets.length > 16) { msgEl.textContent = 'Max 16 per batch.'; msgEl.className = 'msg err'; msgEl.style.display = 'block'; return; }
+        try {
+          const tx = await contract.registerVenuesBatch(targets, labels);
+          msgEl.textContent = 'Tx: ' + tx.hash; msgEl.className = 'msg info'; msgEl.style.display = 'block';
+          await tx.wait();
+          msgEl.textContent = 'Batch registered.'; msgEl.className = 'msg ok';
+          loadVenues();
+          loadStats();
+        } catch (e) {
+          msgEl.textContent = e.message || 'Batch register failed.'; msgEl.className = 'msg err'; msgEl.style.display = 'block';
+        }
+      });
+
+      document.getElementById('btn-load-constants').addEventListener('click', async function() {
+        const out = document.getElementById('constants-out');
+        out.textContent = '';
+        if (!contract) { out.textContent = 'Attach contract first.'; return; }
+        try {
+          const c = await contract.getConstants();
+          out.textContent = 'BPS base: ' + c[0] + '\nMax fee bps: ' + c[1] + '\nMax venues: ' + c[2] + '\nMax batch quote: ' + c[3];
+        } catch (e) {
+          out.textContent = 'Error: ' + (e.message || 'unknown');
+        }
+      });
+
+      document.getElementById('btn-aggregate-stats').addEventListener('click', async function() {
+        const out = document.getElementById('aggregate-stats-out');
+        out.textContent = '';
+        if (!contract) { out.textContent = 'Attach contract first.'; return; }
+        try {
+          const [vol, trades] = await Promise.all([contract.totalVolumeAcrossVenues(), contract.totalTradesAcrossVenues()]);
+          out.textContent = 'Total volume (all venues): ' + ethers.formatEther(vol) + ' ETH\nTotal trades: ' + trades;
+        } catch (e) {
+          out.textContent = 'Error: ' + (e.message || 'unknown');
+        }
+      });
+
+      btnConnect.addEventListener('click', connectWallet);
+      btnAttach.addEventListener('click', function() { attachContract(contractInput.value.trim()); });
+      contractInput.addEventListener('keydown', function(e) { if (e.key === 'Enter') attachContract(contractInput.value.trim()); });
+
+      document.querySelectorAll('.tab').forEach(function(t) {
+        t.addEventListener('click', function() {
+          document.querySelectorAll('.tab').forEach(function(x) { x.classList.remove('active'); });
+          document.querySelectorAll('.panel').forEach(function(x) { x.classList.remove('visible'); });
+          t.classList.add('active');
+          const id = 'panel-' + t.getAttribute('data-tab');
+          const panel = document.getElementById(id);
+          if (panel) panel.classList.add('visible');
+          if (t.getAttribute('data-tab') === 'venues') loadVenues();
+          if (t.getAttribute('data-tab') === 'fees') document.getElementById('btn-load-fees').click();
+        });
+      });
+    })();
+  </script>
+</body>
+</html>
+
